Fixed the overlap

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ h2 {
 
 .row
 .navbar_wrapper { 
-  width: 100%;
+  max-width: 100%;
   margin: 0 auto;
 }
 
